fix: update produto

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,7 +20,7 @@
 		{% endblock %}
 	</head>
 	<body>
-		<div class="container"> {% block body %}{% endblock %}
+		<div class="container d-flex flex-column justify-content-center vh-100"> {% block body %}{% endblock %}
 			</div>
 		</body>
 	</html>
