feat: validate inputs categoria and produto

--- a/templates/produto/index.html.twig
+++ b/templates/produto/index.html.twig
@@ -9,6 +9,9 @@
 		<h1>{{ titulo }}</h1>
 		<a href="{{ path('produto_adicionar') }}" class="btn btn-primary">+ Adicionar</a>
 	</div>
+	<div>
+		<input type="text">
+	</div>
 	<table class="table">
 		<thead>
 			<tr>
