--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,6 +20,21 @@
 		{% endblock %}
 	</head>
 	<body>
+		<nav class="navbar navbar-expand navbar-dark bg-dark">
+			<div class="container">
+				<a href="{{path('index')}}" class="navbar-brand">Symfony App</a>
+				<div class="collapse navbar-collapse">
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a href="{{ path('categoria')}}" class="nav-link">Categorias</a>
+						</li>
+						<li class="nav-item">
+							<a href="{{ path('produto')}}" class="nav-link">Produtos</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
 		<div class="container d-flex flex-column justify-content-center vh-100"> {% block body %}{% endblock %}
 			</div>
 		</body>
