--- a/templates/produto/index.html.twig
+++ b/templates/produto/index.html.twig
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block body %}
+{% if is_granted('ROLE_USER') %}
 	<div class="container d-flex justify-content-between align-items-center mt-4 mb-2">
 		<h1>{{ titulo }}</h1>
 		<a href="{{ path('produto_adicionar') }}" class="btn btn-primary">+ Adicionar</a>
@@ -38,4 +39,4 @@
 			{% endfor %}
 		</tbody>
 	</tbody>
-</table>{% endblock %}
+</table>{% endif %}{% endblock %}
