--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,10 +20,10 @@
 		{% endblock %}
 	</head>
 	<body>
-		<nav class="navbar navbar-expand navbar-dark bg-dark">
-			<div class="container">
+		<nav class="navbar navbar-expand navbar-dark bg-dark d-flex">
+			<div class="container d-flex">
 				<a href="{{path('index')}}" class="navbar-brand">Symfony App</a>
-				<div class="collapse navbar-collapse">
+				<div class="collapse navbar-collapse d-flex">
 					<ul class="navbar-nav">
 						{% if is_granted('ROLE_USER') %}
 							<li class="nav-item">
@@ -32,6 +32,7 @@
 							<li class="nav-item">
 								<a href="{{ path('produto')}}" class="nav-link">Produtos</a>
 							</li>
+
 						{% else %}
 							<li class="nav-item">
 								<a href="{{ path('app_registro')}}" class="nav-link">Registro</a>
@@ -42,10 +43,22 @@
 						</ul>
 					</div>
 				{% endif %}
+
 			</div>
-		</nav>
-		<div class="container d-flex flex-column justify-content-center vh-100"> {% block body %}{% endblock %}
-			</div>
+			<ul class="navbar-nav gap-2">
+				{% if is_granted('ROLE_USER') %}
+					<li class="nav-item">
+						<span class="text-info">{{ app.user.nome }}</span>
+					</li>
+					<li class="nav-item">
+						<a href="{{ path('app_logout')}}" class="text-black bg-light px-2 py-1 rounded text-decoration-none">Sair</a>
+					</li>
+
+				{% endif %}
+			</nav>
+			<div class="container d-flex flex-column justify-content-center vh-100"> {% block body %}{% endblock %}
+
+				</div>
+			</body>
 		</body>
 	</html>
-</body></html>
