--- a/templates/categoria/index.html.twig
+++ b/templates/categoria/index.html.twig
@@ -5,32 +5,39 @@
 {% endblock %}
 
 {% block body %}
-{% if is_granted('ROLE_USER') %}
-	<div class="container d-flex justify-content-between align-items-center mt-4 mb-2">
-		<h1>{{ titulo }}</h1>
-		<a href="{{ path('categoria_adicionar') }}" class="btn btn-primary">+ Adicionar</a>
-	</div>
+	{% if is_granted('ROLE_USER') %}
+		<div class="container d-flex justify-content-between align-items-center mt-4 mb-2">
+			<h1>{{ titulo }}</h1>
+			<a href="{{ path('categoria_adicionar') }}" class="btn btn-primary">+ Adicionar</a>
+		</div>
+		<form method="get">
+			<label>Pesquisar pelo nome:</label>
+			<input type="text" name="nome" class="form-control" value="{{ descricaocategoria }}"/>
+			<button type="submit" class="btn btn-primary mt-2">Pesquisar</button>
+		</form>
+		<div class="container">
+			<table class="table">
+				<thead>
+					<tr>
+						<td>#</td>
+						<td>Descrição</td>
+						<td>Ações</td>
+					</tr>
+				</thead>
 
-	<table class="table">
-		<thead>
-			<tr>
-				<td>#</td>
-				<td>Descrição</td>
-				<td>Ações</td>
-			</tr>
-		</thead>
-
-		<tbody>
-			{% for categoria in categorias %}
-				<tr>
-					<td>{{ categoria.id }}</td>
-					<td>{{ categoria.descricaocategoria }}</td>
-					<td>
-						<a href="{{ path('categoria_editar', {id: categoria.id} )}}" class="btn btn-primary">Editar</a>
-						<a href="{{ path('categoria_excluir', {id: categoria.id})}}" class="btn btn-primary">Excluir</a>
-					</td>
-				</tr>
-			{% endfor %}
-		</tbody>
-	</tbody>
-</table>{% endif %}{% endblock %}
+				<tbody>
+					{% for categoria in categorias %}
+						<tr>
+							<td>{{ categoria.id }}</td>
+							<td>{{ categoria.descricaocategoria }}</td>
+							<td>
+								<a href="{{ path('categoria_editar', {id: categoria.id} )}}" class="btn btn-primary">Editar</a>
+								<a href="{{ path('categoria_excluir', {id: categoria.id})}}" class="btn btn-primary">Excluir</a>
+							</td>
+						</tr>
+					{% endfor %}
+				</tbody>
+			</table>
+		</div>
+	{% endif %}
+{% endblock %}
