--- a/templates/produto/index.html.twig
+++ b/templates/produto/index.html.twig
@@ -5,38 +5,45 @@
 {% endblock %}
 
 {% block body %}
-{% if is_granted('ROLE_USER') %}
-	<div class="container d-flex justify-content-between align-items-center mt-4 mb-2">
-		<h1>{{ titulo }}</h1>
-		<a href="{{ path('produto_adicionar') }}" class="btn btn-primary">+ Adicionar</a>
-	</div>
-	<div>
-		<input type="text">
-	</div>
-	<table class="table">
-		<thead>
-			<tr>
-				<td>#</td>
-				<td>Nome do produto</td>
-				<td>Valor</td>
-				<td>Categoria</td>
-				<td>Ações</td>
-			</tr>
-		</thead>
+	{% if is_granted('ROLE_USER') %}
+		<div class="container d-flex justify-content-between align-items-center mt-4 mb-2">
+			<h1>{{ titulo }}</h1>
+			<a href="{{ path('produto_adicionar') }}" class="btn btn-primary">+ Adicionar</a>
+		</div>
+		<div class="container mb-4">
+			<form method="get">
+				<label>Pesquisar pelo nome:</label>
+				<input type="text" name="nome" class="form-control" value="{{ nomeproduto }}"/>
+				<button type="submit" class="btn btn-primary mt-2">Pesquisar</button>
+			</form>
+		</div>
+		<div class="container">
+			<table class="table">
+				<thead>
+					<tr>
+						<td>#</td>
+						<td>Nome do produto</td>
+						<td>Valor</td>
+						<td>Categoria</td>
+						<td>Ações</td>
+					</tr>
+				</thead>
 
-		<tbody>
-			{% for produto in produtos %}
-				<tr>
-					<td>{{ produto.id }}</td>
-					<td>{{ produto.nomeproduto }}</td>
-					<td>{{ produto.valor }}</td>
-					<td>{{ produto.categoria.descricaocategoria }}</td>
-					<td>
-						<a href="{{ path('produto_editar', {id: produto.id} )}}" class="btn btn-primary">Editar</a>
-						<a href="{{ path('produto_excluir', {id: produto.id})}}" class="btn btn-primary">Excluir</a>
-					</td>
-				</tr>
-			{% endfor %}
-		</tbody>
-	</tbody>
-</table>{% endif %}{% endblock %}
+				<tbody>
+					{% for produto in produtos %}
+						<tr>
+							<td>{{ produto.id }}</td>
+							<td>{{ produto.nomeproduto }}</td>
+							<td>{{ produto.valor }}</td>
+							<td>{{ produto.categoria.descricaocategoria }}</td>
+							<td>
+								<a href="{{ path('produto_editar', {id: produto.id} )}}" class="btn btn-primary">Editar</a>
+								<a href="{{ path('produto_excluir', {id: produto.id})}}" class="btn btn-primary">Excluir</a>
+							</td>
+						</tr>
+					{% endfor %}
+				</tbody>
+			</table>
+		</div>
+	{% endif %}
+{% endblock %}
