--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -14,31 +14,11 @@
 			margin: 1em auto;
 			max-width: 800px;
 			width: 100vw;
-			height: 100vh;
 			font: 18px / 1.5 sans-serif;
-		}
-		.example-wrapper code {
-			background: #F5F5F5;
-			padding: 2px 6px;
 		}
 	</style>
 
-	<div class="example-wrapper">
-		<h1>Hello
-			{{ controller_name }}! ✅</h1>
-
-		This friendly message is coming from:
-		<ul>
-			<li>Your controller at
-				<code>
-					<a href="{{ 'C:/Users/bernardo.farias/Documents/agoravai/my_project/src/Controller/DefaultController.php'|file_link(0) }}">src/Controller/DefaultController.php</a>
-				</code>
-			</li>
-			<li>Your template at
-				<code>
-					<a href="{{ 'C:/Users/bernardo.farias/Documents/agoravai/my_project/templates/default/index.html.twig'|file_link(0) }}">templates/default/index.html.twig</a>
-				</code>
-			</li>
-		</ul>
+	<div class="example-wrapper text-center">
+		<h1>Bem vindo ao Centro de Estudos Symfony</h1>
 	</div>
 {% endblock %}
