--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -6,18 +6,19 @@
 {% block body %}
 	<div class="container">
 		<div class="col-8 offset-2 center">
-			<h1>Criar uma nova conta</h1>
+			<h1 class="text-center">Criar uma nova conta</h1>
+			<div class="container col-8">
+				{{ form_start(registrationForm) }}
+				{{ form_row(registrationForm.nome) }}
+				{{ form_row(registrationForm.email) }}
+				{{ form_row(registrationForm.plainPassword, {
+            	label: 'Password'
+        		}) }}
+				{{ form_row(registrationForm.agreeTerms) }}
 
-			{{ form_start(registrationForm) }}
-			{{ form_row(registrationForm.nome) }}
-			{{ form_row(registrationForm.email) }}
-			{{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-			{{ form_row(registrationForm.agreeTerms) }}
-
-			<button type="submit" class="btn btn-primary">Register</button>
-			{{ form_end(registrationForm) }}
+				<button type="submit" class="btn btn-primary">Register</button>
+				{{ form_end(registrationForm) }}
+			</div>
 		</div>
 	</div>
 {% endblock %}
